force-app/main/default/objects/Case/fields/Ops_Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Ops_Issue_Type__c</fullName>
    <label>Ops Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contamination</fullName>
            </value>
            <value>
                <fullName>Over Weight Limit</fullName>
            </value>
            <value>
                <fullName>Unbranded Bags</fullName>
                <label>Unbranded or Non First Mile Bags</label>
            </value>
            <value>
                <fullName>Loose Waste in Bin</fullName>
            </value>
            <value>
                <fullName>Excess Waste</fullName>
            </value>
            <value>
                <fullName>No Access to Collection Point</fullName>
            </value>
            <value>
                <fullName>Safety Issue</fullName>
            </value>
            <value>
                <fullName>Missed Collection</fullName>
            </value>
            <value>
                <fullName>Cardboard presented incorrectly</fullName>
            </value>
            <value>
                <fullName>Delivery Query</fullName>
            </value>
            <value>
                <fullName>Priority Collection Completed</fullName>
            </value>
            <value>
                <fullName>New Collection Completed</fullName>
            </value>
            <value>
                <fullName>Extra Job</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>