force-app/main/default/objects/Case/fields/Ops_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Ops_Resolution__c</fullName>
    <label>Ops Resolution</label>
    <type>TextArea</type>
</CustomField>