force-app/main/default/objects/Case/fields/Ops_Status_Kanban__c.field-meta.xml
<CustomField>
    <fullName>Ops_Status_Kanban__c</fullName>
    <label>Ops Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Queue</fullName>
            </value>
            <value>
                <fullName>Round Allocated</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>