force-app/main/default/objects/Case/fields/Owner_Left_FM__c.field-meta.xml
<CustomField>
    <fullName>Owner_Left_FM__c</fullName>
    <formula>IF(Owner:User.Last_Working_Date__c    &lt;=   today(), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Left FM</label>
    <type>Checkbox</type>
</CustomField>