force-app/main/default/objects/Case/fields/Owner_OOO__c.field-meta.xml
<CustomField>
    <fullName>Owner_OOO__c</fullName>
    <formula>AND( Owner:User.Out_Of_Office_Start_Date__c  &lt;= today(), 

AND(Owner:User.Out_Of_Office_Return_Date__c &gt; today(), True))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner OOO</label>
    <type>Checkbox</type>
</CustomField>