force-app/main/default/objects/Case/fields/Parent_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_ID__c</fullName>
    <formula>IF ( Location__r.RecordType.Name = &quot;Location&quot;,   Location__r.Parent.case_safe_id__c  ,  
 Location__r.case_safe_id__c)</formula>
    <label>Parent Account ID</label>
    <type>Text</type>
</CustomField>