force-app/main/default/objects/Case/fields/ParentCaseNumber__c.field-meta.xml
<CustomField>
    <fullName>ParentCaseNumber__c</fullName>
    <description>This field is made as external field just to make indexed.</description>
    <externalId>true</externalId>
    <label>Parent Case Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>