force-app/main/default/objects/Case/fields/Product_Return_Method__c.field-meta.xml
<CustomField>
    <fullName>Product_Return_Method__c</fullName>
    <label>Product Return Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Returned by Customer</fullName>
            </value>
            <value>
                <fullName>Collected by FM</fullName>
            </value>
            <value>
                <fullName>Not returned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>