force-app/main/default/objects/Case/fields/Quality_check_feedback__c.field-meta.xml
<CustomField>
    <fullName>Quality_check_feedback__c</fullName>
    <label>Quality check feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>