force-app/main/default/objects/Case/fields/Quality_check_result__c.field-meta.xml
<CustomField>
    <fullName>Quality_check_result__c</fullName>
    <label>Quality check result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>