force-app/main/default/objects/Case/fields/Quality_checked_by__c.field-meta.xml
<CustomField>
    <fullName>Quality_checked_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quality checked by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>