force-app/main/default/objects/Case/fields/Reason_for_Credit__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Credit__c</fullName>
    <inlineHelpText>Is the credit due to a First Mile Error or a Customer Error?</inlineHelpText>
    <label>Reason for Credit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Council Fine</fullName>
            </value>
            <value>
                <fullName>Compensation</fullName>
            </value>
            <value>
                <fullName>Product Return</fullName>
            </value>
            <value>
                <fullName>Invoice Error</fullName>
            </value>
            <value>
                <fullName>Goodwill</fullName>
            </value>
            <value>
                <fullName>Customer Error</fullName>
                <isActive>false</isActive>
                <label>Customer Error</label>
            </value>
            <value>
                <fullName>First Mile Error</fullName>
                <isActive>false</isActive>
                <label>First Mile Error</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>