force-app/main/default/objects/Case/fields/Refund_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Refund_Account_Number__c</fullName>
    <label>Refund Account Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>