force-app/main/default/objects/Case/fields/Refund_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Refund_Bank_Name__c</fullName>
    <label>Refund Bank Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>