force-app/main/default/objects/Case/fields/Refund_Processed__c.field-meta.xml
<CustomField>
    <fullName>Refund_Processed__c</fullName>
    <label>Refund Processed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Waiting for Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Refund Processed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>