force-app/main/default/objects/Case/fields/Refund_Sort_Code__c.field-meta.xml
<CustomField>
    <fullName>Refund_Sort_Code__c</fullName>
    <label>Refund Sort-Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>