force-app/main/default/objects/Case/fields/Requested_Collection_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Collection_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <inlineHelpText>This is used to schedule Extra Jobs, use along with &quot;Requested Collection Time&quot;</inlineHelpText>
    <label>Requested Collection Date</label>
    <type>Date</type>
</CustomField>