force-app/main/default/objects/Case/fields/Requested_Collection_Time__c.field-meta.xml
<CustomField>
    <fullName>Requested_Collection_Time__c</fullName>
    <defaultValue>&quot;PM&quot;</defaultValue>
    <inlineHelpText>This is used to schedule Extra Jobs.</inlineHelpText>
    <label>Requested Collection Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>