force-app/main/default/objects/Case/fields/Requested_Resolution_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Resolution_Date__c</fullName>
    <inlineHelpText>This date has been requested by the finance team.</inlineHelpText>
    <label>Requested Resolution Date</label>
    <type>Date</type>
</CustomField>