force-app/main/default/objects/Case/fields/Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Response_Time__c</fullName>
    <description>The response time measured between the customer&apos;s first email and First Mile support first response.</description>
    <inlineHelpText>The response time measured between the customer&apos;s first email and First Mile support first response.</inlineHelpText>
    <label>Response Time (Hours)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>