force-app/main/default/objects/Case/fields/Round_Number__c.field-meta.xml
<CustomField>
    <fullName>Round_Number__c</fullName>
    <formula>Collection_Schedule__r.Round_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Round Number</label>
    <type>Text</type>
</CustomField>