force-app/main/default/objects/Case/fields/Streams__c.field-meta.xml
<CustomField>
    <fullName>Streams__c</fullName>
    <formula>IF(CONTAINS( Collection_Schedule__r.Collection_Stream__c , &quot;Mixed Recycling&quot;), &quot;Mixed Recycling&quot;+BR(), NULL) + 
IF(CONTAINS( Collection_Schedule__r.Collection_Stream__c , &quot;General Waste&quot;), &quot;General Waste&quot;+BR(), NULL) + 
IF(CONTAINS( Collection_Schedule__r.Collection_Stream__c , &quot;Food&quot;), &quot;Food&quot;+BR(), NULL) + 
IF(CONTAINS( Collection_Schedule__r.Collection_Stream__c , &quot;Cardboard&quot;), &quot;Cardboard&quot;+BR(), NULL)  + 
IF(CONTAINS( Collection_Schedule__r.Collection_Stream__c , &quot;Glass&quot;), &quot;Glass&quot;, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Streams</label>
    <type>Text</type>
</CustomField>