force-app/main/default/objects/Case/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One-Off Issue</fullName>
                <label>Accident/Injury</label>
            </value>
            <value>
                <fullName>Backlog</fullName>
            </value>
            <value>
                <fullName>Bin Replacement Request</fullName>
            </value>
            <value>
                <fullName>Change of name, address, or contact details</fullName>
            </value>
            <value>
                <fullName>Chasing delivery or collection ETA</fullName>
            </value>
            <value>
                <fullName>Check or Change Schedule or Recurring Orders</fullName>
            </value>
            <value>
                <fullName>Clearance</fullName>
            </value>
            <value>
                <fullName>Collection Complete</fullName>
            </value>
            <value>
                <fullName>Collection Point Review Request</fullName>
            </value>
            <value>
                <fullName>Collection Round Service Missed</fullName>
            </value>
            <value>
                <fullName>Compensation</fullName>
            </value>
            <value>
                <fullName>Container too heavy to collect</fullName>
            </value>
            <value>
                <fullName>Couldn&apos;t find bins/bags</fullName>
            </value>
            <value>
                <fullName>Council Fine</fullName>
            </value>
            <value>
                <fullName>Courier</fullName>
            </value>
            <value>
                <fullName>Credit Note</fullName>
            </value>
            <value>
                <fullName>Dangerous Material In Waste</fullName>
            </value>
            <value>
                <fullName>Delivery Issue</fullName>
            </value>
            <value>
                <fullName>Delivery Round Service Missed</fullName>
            </value>
            <value>
                <fullName>Document Request</fullName>
            </value>
            <value>
                <fullName>Escalation</fullName>
            </value>
            <value>
                <fullName>Feedback</fullName>
            </value>
            <value>
                <fullName>Formal Complaint</fullName>
            </value>
            <value>
                <fullName>Frequent Issues at Site</fullName>
            </value>
            <value>
                <fullName>Goodwill</fullName>
            </value>
            <value>
                <fullName>Health and Safety</fullName>
            </value>
            <value>
                <fullName>Invoice Error</fullName>
            </value>
            <value>
                <fullName>Invoice Query</fullName>
            </value>
            <value>
                <fullName>Key or Access Card not working</fullName>
            </value>
            <value>
                <fullName>Key Replacement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>