force-app/main/default/objects/Case/fields/Subcontracted_Operations_Status__c.field-meta.xml
<CustomField>
    <fullName>Subcontracted_Operations_Status__c</fullName>
    <label>Subcontracted Operations Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>