force-app/main/default/objects/Case/fields/syncedwithcp__c.field-meta.xml
<CustomField>
    <fullName>syncedwithcp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>syncedwithcp</label>
    <type>Checkbox</type>
</CustomField>