force-app/main/default/objects/Case/fields/Text_conversion_Ops_issue__c.field-meta.xml
<CustomField>
    <fullName>Text_conversion_Ops_issue__c</fullName>
    <formula>TEXT( Ops_Issue_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Text conversion Ops issue</label>
    <type>Text</type>
</CustomField>