force-app/main/default/objects/Case/fields/Time_collected__c.field-meta.xml
<CustomField>
    <fullName>Time_collected__c</fullName>
    <description>Time collected for Extra jobs and Missed, is populated when completed_by_driver_app__c = true (which is set to true when driver completes a job)</description>
    <label>Time collected</label>
    <type>DateTime</type>
</CustomField>