force-app/main/default/objects/Case/fields/Time_Fine_Issued__c.field-meta.xml
<CustomField>
    <fullName>Time_Fine_Issued__c</fullName>
    <description>Time of council fine</description>
    <label>Time Fine Issued</label>
    <type>Time</type>
</CustomField>