force-app/main/default/objects/Case/fields/timesincelastemail__c.field-meta.xml
<CustomField>
    <fullName>timesincelastemail__c</fullName>
    <formula>ROUND(
    IF(
        ISBLANK(Last_Email_Date_Time__c), 
        (NOW() - CreatedDate) * 24, 
        (NOW() - Last_Email_Date_Time__c) * 24
    ),
    2
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>timesincelastemail</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>