force-app/main/default/objects/Case/fields/tmstamp_update__c.field-meta.xml
<CustomField>
    <fullName>tmstamp_update__c</fullName>
    <label>tmstamp_update</label>
    <type>DateTime</type>
</CustomField>