force-app/main/default/objects/Case/fields/Token__c.field-meta.xml
<CustomField>
    <fullName>Token__c</fullName>
    <formula>&quot;https://portal.thefirstmile.co.uk/redirect-dashboard?token=&quot; &amp; Contact.FMCP_Token__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Token</label>
    <type>Text</type>
</CustomField>