force-app/main/default/objects/Case/fields/Total_Value_of_Credit_Refund_Gift__c.field-meta.xml
<CustomField>
    <fullName>Total_Value_of_Credit_Refund_Gift__c</fullName>
    <label>Total Value of Credit/Refund/Gift</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>