force-app/main/default/objects/Case/fields/Unread_Email__c.field-meta.xml
<CustomField>
    <fullName>Unread_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unread Email</label>
    <type>Checkbox</type>
</CustomField>