force-app/main/default/objects/Case/fields/Unresponded_Email__c.field-meta.xml
<CustomField>
    <fullName>Unresponded_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unresponded Email</label>
    <type>Checkbox</type>
</CustomField>