force-app/main/default/objects/Case/fields/User_hidden__c.field-meta.xml
<CustomField>
    <fullName>User_hidden__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User(hidden)</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>First Mile CS</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>