force-app/main/default/objects/Case/fields/Wait_Time__c.field-meta.xml
<CustomField>
    <fullName>Wait_Time__c</fullName>
    <formula>now()- Last_Email_Date_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wait Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>