force-app/main/default/objects/Case/fields/What_to_credit__c.field-meta.xml
<CustomField>
    <fullName>What_to_credit__c</fullName>
    <inlineHelpText>If not crediting the whole invoice, please specify what to credit - either a product and quantity, or a fixed cost excluding VAT.
eg
25 x medium rubbish sack
OR
£50 ex VAT</inlineHelpText>
    <label>What to credit</label>
    <type>TextArea</type>
</CustomField>