force-app/main/default/objects/Case/recordTypes/Billing_Pricing_Query.recordType-meta.xml
<RecordType>
    <fullName>Billing_Pricing_Query</fullName>
    <active>true</active>
    <businessProcess>Email</businessProcess>
    <label>Billing/Pricing Query</label>
</RecordType>