force-app/main/default/objects/Case/recordTypes/Corona_Office_Re_Open.recordType-meta.xml
<RecordType>
    <fullName>Corona_Office_Re_Open</fullName>
    <active>false</active>
    <businessProcess>Email</businessProcess>
    <label>Corona Office Re-open</label>
</RecordType>