force-app/main/default/objects/Case/recordTypes/Council_Fine.recordType-meta.xml
<RecordType>
    <fullName>Council_Fine</fullName>
    <active>true</active>
    <businessProcess>Council Fine</businessProcess>
    <label>Council Fine</label>
</RecordType>