force-app/main/default/objects/Case/recordTypes/Credit_Note_Request.recordType-meta.xml
<RecordType>
    <fullName>Credit_Note_Request</fullName>
    <active>true</active>
    <businessProcess>Email</businessProcess>
    <label>Credit Note/Refund Request</label>
</RecordType>