force-app/main/default/objects/Case/recordTypes/Delivery_Query.recordType-meta.xml
<RecordType>
    <fullName>Delivery_Query</fullName>
    <active>true</active>
    <businessProcess>Delivery Query</businessProcess>
    <label>Delivery Query</label>
</RecordType>