force-app/main/default/objects/Case/recordTypes/Email.recordType-meta.xml
<RecordType>
    <fullName>Email</fullName>
    <active>true</active>
    <businessProcess>Email</businessProcess>
    <label>Master Case Record Type</label>
</RecordType>