force-app/main/default/objects/Case/recordTypes/Extra_Job.recordType-meta.xml
<RecordType>
    <fullName>Extra_Job</fullName>
    <active>true</active>
    <businessProcess>Extra Job</businessProcess>
    <label>Extra Job</label>
</RecordType>