force-app/main/default/objects/Case/recordTypes/Health_Safety.recordType-meta.xml
<RecordType>
    <fullName>Health_Safety</fullName>
    <active>false</active>
    <businessProcess>Health and Safety</businessProcess>
    <label>Health &amp; Safety</label>
</RecordType>