force-app/main/default/objects/Case/recordTypes/Missed_Collection.recordType-meta.xml
<RecordType>
    <fullName>Missed_Collection</fullName>
    <active>true</active>
    <businessProcess>Missed Collection</businessProcess>
    <label>Missed Collection</label>
</RecordType>