force-app/main/default/objects/Case/recordTypes/Operations.recordType-meta.xml
<RecordType>
    <fullName>Operations</fullName>
    <active>true</active>
    <businessProcess>Operational Complaint</businessProcess>
    <label>Operations</label>
</RecordType>