force-app/main/default/objects/Case/recordTypes/Retention_Call.recordType-meta.xml
<RecordType>
    <fullName>Retention_Call</fullName>
    <active>false</active>
    <businessProcess>Email</businessProcess>
    <label>Retention Call</label>
</RecordType>