force-app/main/default/objects/Case/validationRules/Action_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Action_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &quot;Credit_Note_Request&quot;,
    ISBLANK(TEXT(Action__c))
)</errorConditionFormula>
    <errorDisplayField>Action__c</errorDisplayField>
    <errorMessage>Please fill out the action that needs to be taken</errorMessage>
</ValidationRule>