force-app/main/default/objects/Case/validationRules/Council_Fine_Non_Closure.validationRule-meta.xml
<ValidationRule>
    <fullName>Council_Fine_Non_Closure</fullName>
    <active>false</active>
    <description>A restriction to stop Council Fine cases being closed without the relevant details being filled.</description>
    <errorConditionFormula>RecordType.Name = &quot;Council Fine&quot; &amp;&amp; (ISBLANK ( Fine_Date_of_Offence__c ) || ISBLANK( Fine_Date_Received__c ) || ISBLANK( FPN_PCN_Reference__c )) &amp;&amp; ISPICKVAL( Status , &apos;Closed&apos;)</errorConditionFormula>
    <errorMessage>This case cannot be Closed until the fields &quot;Fine - Date of Offence&quot;, &quot;Fine - Date_Received&quot;, &quot;Fine - Reason for Fine&quot; and &quot;Fine - FPN Number&quot; have been filled out.</errorMessage>
</ValidationRule>