force-app/main/default/objects/Case/validationRules/Council_Required_for_Council_Fine.validationRule-meta.xml
<ValidationRule>
    <fullName>Council_Required_for_Council_Fine</fullName>
    <active>false</active>
    <description>If the case type is &quot;Council Fine&quot; Council field will be required.</description>
    <errorConditionFormula>AND( ISPICKVAL(Type, &quot;Council Fine&quot;) , ISBLANK( Council__c ))</errorConditionFormula>
    <errorDisplayField>Council__c</errorDisplayField>
    <errorMessage>Council is required.</errorMessage>
</ValidationRule>