force-app/main/default/objects/Case/validationRules/Credit_Fill_Out_Total.validationRule-meta.xml
<ValidationRule>
    <fullName>Credit_Fill_Out_Total</fullName>
    <active>true</active>
    <description>Not allowing the case to be closed until a value is placed in the Total_Value_of_Credit_Refund_Gift__c field</description>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &quot;Credit_Note_Request&quot;,
    ISPICKVAL(Action__c, &quot;Credit&quot;),
    ISPICKVAL(Reason_for_Credit__c, &quot;&quot;),
    ISBLANK(Total_Value_of_Credit_Refund_Gift__c)
)</errorConditionFormula>
    <errorDisplayField>Total_Value_of_Credit_Refund_Gift__c</errorDisplayField>
    <errorMessage>Please fill out an ex VAT value for your credit and make sure that you have filled out a reason in the Reason for Credit Field.</errorMessage>
</ValidationRule>