force-app/main/default/objects/Case/validationRules/Credit_Note_Non_Closures.validationRule-meta.xml
<ValidationRule>
    <fullName>Credit_Note_Non_Closures</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status, &quot;Closed&quot;),
ISPICKVAL(Action__c, &quot;Credit&quot;), 
RecordType.DeveloperName = &quot;Credit_Note_Request&quot;,
NOT(OR(Rejected__c, Finance_Approved__c))
)</errorConditionFormula>
    <errorMessage>This case cannot be closed until your request has been approved or rejected. You&apos;ll receive a notifcation once this has been completed.</errorMessage>
</ValidationRule>