force-app/main/default/objects/Case/validationRules/Credit_Rejection_Reasons.validationRule-meta.xml
<ValidationRule>
    <fullName>Credit_Rejection_Reasons</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Rejected__c = TRUE,
ISBLANK(Reason_for_Rejection__c)
)</errorConditionFormula>
    <errorDisplayField>Reason_for_Rejection__c</errorDisplayField>
    <errorMessage>Please fill out a reason for rejecting this credit</errorMessage>
</ValidationRule>