force-app/main/default/objects/Case/validationRules/Fine_Date_Required_for_Council_Fine.validationRule-meta.xml
<ValidationRule>
    <fullName>Fine_Date_Required_for_Council_Fine</fullName>
    <active>false</active>
    <description>If the case type is &quot;Council Fine&quot; Fine Date field will be required.</description>
    <errorConditionFormula>AND( ISPICKVAL(Type, &quot;Council Fine&quot;) , ISBLANK( Fine_Date__c))</errorConditionFormula>
    <errorDisplayField>Fine_Date__c</errorDisplayField>
    <errorMessage>This field is required.</errorMessage>
</ValidationRule>