force-app/main/default/objects/Case/validationRules/Fine_Paid_Required_for_Council_Fine.validationRule-meta.xml
<ValidationRule>
    <fullName>Fine_Paid_Required_for_Council_Fine</fullName>
    <active>false</active>
    <description>If the case type is &quot;Council Fine&quot; Fine Paid field will be required.</description>
    <errorConditionFormula>AND( ISPICKVAL(Type, &quot;Council Fine&quot;) , ISPICKVAL( Fine_Paid__c,&quot;&quot;))</errorConditionFormula>
    <errorDisplayField>Fine_Paid__c</errorDisplayField>
    <errorMessage>This field is required.</errorMessage>
</ValidationRule>