force-app/main/default/objects/Case/validationRules/Ops_Resolution_for_Ops_Question_cases.validationRule-meta.xml
<ValidationRule>
    <fullName>Ops_Resolution_for_Ops_Question_cases</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status, &quot;Closed&quot;),
    ISPICKVAL(Type, &quot;Ops Question&quot;),
    ISBLANK(Ops_Resolution__c)
)</errorConditionFormula>
    <errorMessage>Please Fill out the Ops Resolution field before attempting to close this case</errorMessage>
</ValidationRule>