force-app/main/default/objects/Case/validationRules/RequireExtraJobProduct.validationRule-meta.xml
<ValidationRule>
    <fullName>RequireExtraJobProduct</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(Round_Dispatched__c), NOT(ISBLANK(Round_Dispatched__c)), ISBLANK(SupplierProduct__c), ISPICKVAL(Type, &apos;Extra Job&apos;))</errorConditionFormula>
    <errorDisplayField>SupplierProduct__c</errorDisplayField>
    <errorMessage>Collection product is required for Extra Job to be assigned to dispatch.</errorMessage>
</ValidationRule>