force-app/main/default/objects/Case/validationRules/RequireFacility.validationRule-meta.xml
<ValidationRule>
    <fullName>RequireFacility</fullName>
    <active>false</active>
    <errorConditionFormula>AND(RecordType.DeveloperName = &apos;Extra_Job&apos;, ISCHANGED(Round_Dispatched__c), NOT(ISBLANK(Round_Dispatched__c)), ISBLANK(Facility__c))</errorConditionFormula>
    <errorDisplayField>Facility__c</errorDisplayField>
    <errorMessage>Facility is required for Extra Job.</errorMessage>
</ValidationRule>