force-app/main/default/objects/Case/validationRules/RequireLocation.validationRule-meta.xml
<ValidationRule>
    <fullName>RequireLocation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISCHANGED(Type), ISBLANK(Location__c), OR(ISPICKVAL(Type, &apos;Missed Collection&apos;), ISPICKVAL(Type, &apos;Extra Job&apos;)))</errorConditionFormula>
    <errorDisplayField>Location__c</errorDisplayField>
    <errorMessage>Location is required for Missed Collection or Extra Job.</errorMessage>
</ValidationRule>