force-app/main/default/objects/Case/validationRules/RestrictCaseReopen.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictCaseReopen</fullName>
    <active>true</active>
    <errorConditionFormula>NOW() &gt;= (ClosedDate + $Setup.CaseSetting__c.ReopenDuration__c) &amp;&amp; NOT(ISPICKVAL(Status, &apos;Closed&apos;))</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Case not allowed to reopen as beyond allowed duration.
Check for latest case or open new case.</errorMessage>
</ValidationRule>