force-app/main/default/objects/Case/validationRules/RestrictDispatch.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictDispatch</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(Round_Dispatched__c), NOT(ISBLANK(Round_Dispatched__c)), OR(Round_Dispatched__r.Dispatch_Date__c != TODAY(), ISPICKVAL(Round_Dispatched__r.Status__c, &apos;Complete&apos;)))</errorConditionFormula>
    <errorDisplayField>Round_Dispatched__c</errorDisplayField>
    <errorMessage>Dispatch must be of today and not completed.</errorMessage>
</ValidationRule>