force-app/main/default/objects/Case/validationRules/Street_Required_for_Council_Fine.validationRule-meta.xml
<ValidationRule>
    <fullName>Street_Required_for_Council_Fine</fullName>
    <active>false</active>
    <description>If the case type is &quot;Council Fine&quot; Street field will be required.</description>
    <errorConditionFormula>AND( ISPICKVAL(Type, &quot;Council Fine&quot;) , ISBLANK( Street__c ))</errorConditionFormula>
    <errorDisplayField>Street__c</errorDisplayField>
    <errorMessage>This field is required.</errorMessage>
</ValidationRule>